# docker-console

./: .gitignore  README.md  pyproject.toml
data/: io.github.mfat.dockerconsole.desktop  io.github.mfat.dockerconsole.metainfo.xml
docker_console/: __init__.py  __main__.py  app.py  connections.py  context.py  host_picker.py  page.py  result.py  settings.py  terminal.py  window.py
docker_console/transport/: __init__.py  base.py  local.py  ssh.py
tests/: test_client.py  test_connections.py  test_context.py  test_gtk.py  test_settings.py  test_transport.py
